--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           use-mathlib-cache: true
 
   python-tests:
-    name: Python tests (pytest)
+    name: Python tests (pytest + UCC)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -35,6 +35,7 @@ jobs:
           cache: "pip"
           cache-dependency-path: |
             python/pyproject.toml
+            ucc/pyproject.toml
 
       - name: Install python package + dev deps
         working-directory: python
@@ -42,7 +43,13 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -e ".[dev]"
 
-      - name: Run pytest
+      - name: Run pytest (python/)
         working-directory: python
         run: |
+          python -m pytest -q
+
+      - name: Install UCC + run UCC tests
+        run: |
+          python -m pip install -e "./ucc[dev]"
+          cd ucc
           python -m pytest -q
