--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,34 +42,26 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -e ".[dev]"
-          # Safety: ensure API test deps exist
           python -m pip install fastapi uvicorn httpx
 
       - name: Run python tests
         working-directory: python
-        run: |
-          python -m pytest -q
+        run: python -m pytest -q
 
       - name: Install UCC (dev)
-        run: |
-          python -m pip install -e "./ucc[dev]"
+        run: python -m pip install -e "./ucc[dev]"
 
       - name: Run UCC tests
         working-directory: ucc
-        run: |
-          python -m pytest -q
+        run: python -m pytest -q
 
       - name: KONOMI smoke run (quick)
-        run: |
-          python python/experiments/konomi_smoke/run_smoke.py --quick --outdir python/experiments/konomi_smoke/out
+        run: python python/experiments/konomi_smoke/run_smoke.py --quick --outdir python/experiments/konomi_smoke/out
 
       - name: UCC coverage for KONOMI smoke summary
-        run: |
-          python -m ucc.cli run ucc/modules/konomi_smoke_coverage.yml \
-            --input python/experiments/konomi_smoke/out/konomi_smoke_summary.json \
-            --outdir ucc/out/ci_konomi_smoke
+        run: python -m ucc.cli run ucc/modules/konomi_smoke_coverage.yml --input python/experiments/konomi_smoke/out/konomi_smoke_summary.json --outdir ucc/out/ci_konomi_smoke
 
-      - name: UCC coverage fixtures (fast, deterministic)
+      - name: UCC coverage fixtures
         run: |
           python -m ucc.cli run ucc/modules/quantum_anchor_coverage.yml --input ucc/tasks/quantum_anchor_task.json --outdir ucc/out/ci_quantum_anchor
           python -m ucc.cli run ucc/modules/mc_ai_salvage_coverage.yml --input ucc/tasks/mc_ai_salvage_task.json --outdir ucc/out/ci_mc_ai_salvage
