--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,9 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -e ".[dev]"
           python -m pip install fastapi uvicorn httpx
+          python -m pip install "numpy>=1.24"
+          python -c "import sys, numpy; print('PY', sys.executable); print('numpy', numpy.__version__)"
+
 
       - name: Run python tests
         working-directory: python
@@ -50,6 +53,8 @@ jobs:
 
       - name: Install UCC (dev)
         run: python -m pip install -e "./ucc[dev]"
+          python -c "import ucc; import konomi; print('ucc+konomi import ok')"
+
 
       - name: Run UCC tests
         working-directory: ucc
