--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -11,7 +11,8 @@ requires-python = ">=3.10"
 dependencies = []
 
 [project.optional-dependencies]
-dev = ["pytest>=7", "hypothesis>=6"]
+dev = [
+  "numpy>=1.24","pytest>=7", "hypothesis>=6"]
 viz = ["matplotlib>=3.8"]
 
 [tool.pytest.ini_options]
