Fix: normalize pinned JSON artifacts to LF + re-pin public_signals schema sha

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,7 @@ ucc/circuits/**/*.json text eol=lf
 ucc/schemas/**/*.json text eol=lf
 ucc/verifiers/**/*.json text eol=lf
 ucc/circuits/**/*.json text eol=lf
+# Deterministic hashing across platforms (avoid CRLF/LF sha drift)
+ucc/schemas/**/*.json text eol=lf
+ucc/verifiers/**/*.json text eol=lf
+ucc/circuits/**/*.json text eol=lf
