--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  
-
   python-ucc:
     name: Python + UCC + KONOMI smoke
     runs-on: ubuntu-latest
@@ -19,56 +17,36 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.12"
           cache: "pip"
           cache-dependency-path: |
             python/pyproject.toml
             ucc/pyproject.toml
+            tools/coherenceledger_bootstrap/pyproject.toml
 
-      - name: Install Python package (dev)
-        working-directory: python
+      - name: Bootstrap monorepo (venv + editable installs + deps)
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -e ".[dev]"
-          python -m pip install fastapi uvicorn httpx
-          python -m pip install "numpy>=1.24"
-          python -c "import sys, numpy; print('PY', sys.executable); print('numpy', numpy.__version__)"
+          python scripts/dev_bootstrap.py --skip-tests
+          .venv/bin/python -c "import sys; print('VENV PY:', sys.executable)"
 
       - name: Run python tests
-        working-directory: python
-        run: python -m pytest -q
-
-      - name: Install UCC (dev)
-        run: |
-          python -m pip install -e "./ucc[dev]"
-          # coherenceledger: add to environment if it is a package; otherwise PYTHONPATH in test step handles imports
-          if [ -f tools/coherenceledger_bootstrap/pyproject.toml ] || [ -f tools/coherenceledger_bootstrap/setup.py ]; then
-            python -m pip install -e ./tools/coherenceledger_bootstrap
-          fi
-          # Best-effort editable install if it's a package (OK if it fails; PYTHONPATH below still works)
-          python -c "import ucc; import konomi; print('ucc+konomi import ok')"
+        run: .venv/bin/python -m pytest -q python/tests
 
       - name: Run UCC tests
-        working-directory: ucc
-        env:
-          PYTHONPATH: /home/runner/work/CoherenceLattice/CoherenceLattice/tools/coherenceledger_bootstrap:/home/runner/work/CoherenceLattice/CoherenceLattice/tools/coherenceledger_bootstrap/src
-        run: python -m pytest -q
+        run: .venv/bin/python -m pytest -q ucc/tests
 
       - name: KONOMI smoke run (quick)
-        run: python python/experiments/konomi_smoke/run_smoke.py --quick --outdir python/experiments/konomi_smoke/out
+        run: .venv/bin/python python/experiments/konomi_smoke/run_smoke.py --quick --outdir python/experiments/konomi_smoke/out
 
       - name: UCC coverage for KONOMI smoke summary
-        run: python -m ucc.cli run ucc/modules/konomi_smoke_coverage.yml --input python/experiments/konomi_smoke/out/konomi_smoke_summary.json --outdir ucc/out/ci_konomi_smoke
+        run: .venv/bin/python -m ucc.cli run ucc/modules/konomi_smoke_coverage.yml --input python/experiments/konomi_smoke/out/konomi_smoke_summary.json --outdir ucc/out/ci_konomi_smoke
 
       - name: UCC coverage fixtures
         run: |
-          python -m ucc.cli run ucc/modules/quantum_anchor_coverage.yml --input ucc/tasks/quantum_anchor_task.json --outdir ucc/out/ci_quantum_anchor
-          python -m ucc.cli run ucc/modules/mc_ai_salvage_coverage.yml --input ucc/tasks/mc_ai_salvage_task.json --outdir ucc/out/ci_mc_ai_salvage
-          python -m ucc.cli run ucc/modules/kontainer_deploy_coverage.yml --input ucc/tasks/kontainer_deploy_task.json --outdir ucc/out/ci_kontainer
-          python -m ucc.cli run ucc/modules/konomi_api_security_coverage.yml --input ucc/tasks/konomi_api_security_task.json --outdir ucc/out/ci_api_security
+          .venv/bin/python -m ucc.cli run ucc/modules/quantum_anchor_coverage.yml --input ucc/tasks/quantum_anchor_task.json --outdir ucc/out/ci_quantum_anchor
+          .venv/bin/python -m ucc.cli run ucc/modules/mc_ai_salvage_coverage.yml --input ucc/tasks/mc_ai_salvage_task.json --outdir ucc/out/ci_mc_ai_salvage
+          .venv/bin/python -m ucc.cli run ucc/modules/kontainer_deploy_coverage.yml --input ucc/tasks/kontainer_deploy_task.json --outdir ucc/out/ci_kontainer
+          .venv/bin/python -m ucc.cli run ucc/modules/konomi_api_security_coverage.yml --input ucc/tasks/konomi_api_security_task.json --outdir ucc/out/ci_api_security
 
       - name: Registry walker (all packs + enforced mappings)
-        run: python ucc/tools/run_registry_walker.py
-
-      - name: Registry walker (all packs + enforced mappings)
-        run: python ucc/tools/run_registry_walker.py
+        run: .venv/bin/python ucc/tools/run_registry_walker.py
