--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,22 @@ jobs:
       - name: Run UCC tests
         run: .venv/bin/python -m pytest -q ucc/tests
 
+      - name: Telemetry smoke (wrapper, ΔS/Λ perturbations)
+        run: .venv/bin/python tools/telemetry/run_wrapper.py --out out/telemetry_smoke --quick --perturbations 3
+
+      - name: Validate telemetry (quality gates incl ΔS/Λ)
+        run: .venv/bin/python tools/telemetry/validate_run.py out/telemetry_smoke/telemetry.json --min-psi 0.80 --min-t 0.80 --min-es 0.80 --max-lambda 0.20 --max-deltas 0.20
+
+      - name: Compare telemetry vs baseline
+        run: .venv/bin/python tools/telemetry/compare_runs.py tests/baselines/telemetry_smoke.baseline.json out/telemetry_smoke/telemetry.json
+
+      - name: Upload telemetry artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: telemetry_smoke
+          path: out/telemetry_smoke
+
       - name: Telemetry smoke (wrapper)
         run: .venv/bin/python tools/telemetry/run_wrapper.py --out out/telemetry_smoke --quick
 
@@ -66,4 +82,5 @@ jobs:
 
       - name: Registry walker (all packs + enforced mappings)
         run: .venv/bin/python ucc/tools/run_registry_walker.py
+
 
