--- a/.gitattributes
+++ b/.gitattributes
@@ -1,20 +1,4 @@
-﻿# Deterministic hashing across platforms (avoid CRLF/LF sha drift)
-ucc/schemas/**/*.json text eol=lf
-ucc/verifiers/**/*.json text eol=lf
-ucc/circuits/**/*.json text eol=lf
-# Deterministic hashing across platforms (avoid CRLF/LF sha drift)
-ucc/schemas/**/*.json text eol=lf
-ucc/verifiers/**/*.json text eol=lf
-ucc/circuits/**/*.json text eol=lf
-# Deterministic hashing across platforms (avoid CRLF/LF sha drift)
-ucc/schemas/**/*.json text eol=lf
-ucc/verifiers/**/*.json text eol=lf
-ucc/circuits/**/*.json text eol=lf
-# Deterministic hashing across platforms (avoid CRLF/LF sha drift)
-ucc/schemas/**/*.json text eol=lf
-ucc/verifiers/**/*.json text eol=lf
-ucc/circuits/**/*.json text eol=lf
-# Deterministic hashing across platforms (avoid CRLF/LF sha drift)
-ucc/schemas/**/*.json text eol=lf
-ucc/verifiers/**/*.json text eol=lf
-ucc/circuits/**/*.json text eol=lf
+﻿# Deterministic line endings
+* text=auto eol=lf
+*.ps1 text eol=crlf
+*.bat text eol=crlf
