--- a/.github/workflows/plasticity_plumbing.yml
+++ b/.github/workflows/plasticity_plumbing.yml
@@ -120,6 +120,14 @@ jobs:
       - name: Verify artifacts (B representative run)
         run: |
           .venv/bin/python tools/telemetry/verify_artifacts.py out/B_plumbing_ci/run_03/telemetry.json --repo-root .
+      - name: Validate Claims (A/B)
+        if: always()
+        run: |
+          for f in out/A_v24_ci/run_05/telemetry.json out/B_v24_ci/run_05/telemetry.json out/A_plumbing_ci/run_03/telemetry.json out/B_plumbing_ci/run_03/telemetry.json; do
+            if [ -f "$f" ]; then
+              .venv/bin/python tools/telemetry/validate_claims.py "$f" --repo-root .
+            fi
+          done
       - name: Validate TEL JSONL
         if: always()
         run: |
