Examples: make submission_demo byte-stable across OS (disable EOL conversion)

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,5 @@
 *.yaml  text eol=lf
 *.md    text eol=lf
 *.csv   text eol=lf
+# Keep example submission pack byte-stable across OS for reproducible SHA256 receipts
+examples/submission_demo/** -text
