Add Sophia smoke workflow and numpy runtime dep

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -8,7 +8,9 @@ version = "0.1.0"
 description = "Simulation harness for the Coherence Lattice (mirrors Lean definitions)."
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+  "numpy>=1.24",
+]
 
 [project.optional-dependencies]
 dev = [
