Ignore desktop build outputs

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,11 @@ runs/
 
 # --- Python packaging noise ---
 *.egg-info/
+# --- Desktop/Tauri build outputs ---
+desktop/node_modules/
+desktop/dist/
+desktop/src-tauri/target/
+desktop/src-tauri/bundle/
+
+# --- Rust ---
+target/
