Ignore desktop build outputs

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,11 @@ desktop/src-tauri/bundle/
 
 # --- Rust ---
 target/
+# --- Desktop/Tauri build outputs ---
+desktop/node_modules/
+desktop/dist/
+desktop/src-tauri/target/
+desktop/src-tauri/bundle/
+
+# --- Rust ---
+target/
