--- a/desktop/package.json
+++ b/desktop/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build"
+    "tauri:build": "tauri build",
+    "icons": "tauri icon --input src-tauri/icons/icon.svg --output src-tauri/icons",
+    "pretauri:build": "npm run icons"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.6.0"
