--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
-*.py     text eol=lf
-*.json   text eol=lf
-*.jsonl  text eol=lf
-*.md     text eol=lf
+*.ps1 text eol=lf
+*.png -diff
+*.ico -diff
+*.icns -diff
+*.exe -diff
+*.dll -diff
+*.zip -diff
